<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg">•••••••••••••••••</string>
<string name="lbl_email">Email</string>
<string name="lbl_profile_2">Profile 2</string>
<string name="msg_don_t_have_an_a">Don’t have an account? Register here</string>
<string name="msg_by_continuing">By continuing, you agree with our Terms &amp; Conditions and Privacy Policy</string>
<string name="lbl_gender">Gender</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_signup_4">SignUp 4</string>
<string name="lbl_or_login_with">or login with</string>
<string name="msg_already_have_an">Already have an account? Log In</string>
<string name="lbl_login">Login</string>
<string name="lbl_dominic_ovo2">\@dominic_ovo</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_12_12_2000">12-12-2000</string>
<string name="lbl_change_password">Change Password</string>
<string name="msg_check_your_app">Check your app\'s UI from the below demo screens of your app.</string>
<string name="msg_or_register_wit">or register with</string>
<string name="lbl_password">Password</string>
<string name="lbl_male">Male</string>
<string name="lbl_307_555_0133">(307) 555-0133</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="lbl_dominic_ovo">Dominic Ovo</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_register">Register</string>
<string name="msg_rex4dom_gmail_c">rex4dom@gmail.com</string>
<string name="lbl_birthday">Birthday</string>
<string name="lbl_login_4">Login 4</string>
<string name="lbl_full_name">Full Name</string>
</resources>
