<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signup4VM" type="com.application.app.modules.signup4.data.viewmodel.Signup4VM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linear1"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_23pxv"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_system_icon_24px_left_6"/>
                <TextView android:gravity="center"
                    android:id="@+id/txtRegister"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_150pxh"
                    android:layout_marginStart="@dimen/_109pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:text="@{signup4VM.signup4Model.txtRegister}"
                    style="@style/txtPoppinsbold16" tools:text="@string/lbl_register"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_36pxv"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:gravity="center"
                    android:id="@+id/image1"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginEnd="@dimen/_157pxh"
                    android:layout_marginStart="@dimen/_158pxh"
                    android:layout_width="@dimen/_60pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_7"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={signup4VM.signup4Model.etEmailValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/lbl_full_name"
                    android:id="@+id/etFullName"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={signup4VM.signup4Model.etFullNameValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={signup4VM.signup4Model.etPasswordValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/msg_confirm_passwor"
                    android:id="@+id/etConfirmPasswor"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={signup4VM.signup4Model.etConfirmPassworValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <TextView android:gravity="center"
                    android:id="@+id/txtByContinuing"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_marginTop="@dimen/_38pxv"
                    android:layout_width="wrap_content"
                    android:text="@{signup4VM.signup4Model.txtByContinuing}"
                    style="@style/txtPoppinsregular12" tools:text="@string/msg_by_continuing"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:gravity="center"
                    android:id="@+id/btnRegister"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:text="@string/lbl_register"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>
                <LinearLayout android:id="@+id/linear3"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <LinearLayout android:id="@+id/linear4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <View android:background="@color/black_900"
                            android:id="@+id/line"
                            android:layout_gravity="center_vertical"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_114pxh"/>
                        <TextView android:gravity="center"
                            android:id="@+id/txtOrRegisterWit"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="@{signup4VM.signup4Model.txtOrRegisterWit}"
                            style="@style/txtPoppinsregular14_1" tools:text="@string/msg_or_register_wit"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/line1"
                            android:layout_gravity="center_vertical"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_114pxh"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linear5"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_83pxh"
                        android:layout_marginTop="@dimen/_28pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <FrameLayout android:id="@+id/frame"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:layout_width="0dp" style="@style/groupStyleblack_900cornerRadius">
                            <ImageView android:gravity="center"
                                android:id="@+id/image2"
                                android:layout_gravity="center"
                                android:layout_height="@dimen/_16pxv"
                                android:layout_marginBottom="@dimen/_13pxv"
                                android:layout_marginTop="@dimen/_14pxv"
                                android:layout_width="@dimen/_14pxh"
                                android:scaleType="fitXY" android:src="@drawable/img_group_3"/>
                        </FrameLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:nestedScrollingEnabled="false"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            itemSpace="@{@dimen/_20pxh}"
                            tools:itemCount="2" tools:listitem="@layout/row_signup_5"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:gravity="center"
                    android:id="@+id/txtAlreadyHaveAn"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:layout_marginStart="@dimen/_90pxh"
                    android:layout_marginTop="@dimen/_42pxv"
                    android:layout_width="wrap_content"
                    android:text="@{signup4VM.signup4Model.txtAlreadyHaveAn}"
                    style="@style/txtPoppinsbold12_1" tools:text="@string/msg_already_have_an"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
