<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="splashVM" type="com.application.app.modules.splash.data.viewmodel.SplashVM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linear1"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_23pxv"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_system_icon_24px_left_5"/>
                <TextView android:gravity="center"
                    android:id="@+id/txtLogin"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_155pxh"
                    android:layout_marginStart="@dimen/_113pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:text="@{splashVM.splashModel.txtLogin}"
                    style="@style/txtPoppinsbold16" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_36pxv"
                android:layout_marginTop="@dimen/_61pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:gravity="center"
                    android:id="@+id/image1"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_122pxv"
                    android:layout_marginEnd="@dimen/_126pxh"
                    android:layout_marginStart="@dimen/_127pxh"
                    android:layout_width="@dimen/_122pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_8"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_54pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={splashVM.splashModel.etEmailValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <EditText
                    android:background="@drawable/rectangle_border_black_900_radius_5"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={splashVM.splashModel.etPasswordValue}"
                    android:textColorHint="@color/bluegray_300" style="@style/etRoundedOutline"/>
                <TextView android:gravity="top|end"
                    android:id="@+id/txtForgotPassword"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:text="@{splashVM.splashModel.txtForgotPassword}"
                    style="@style/txtPoppinsbold12" tools:text="@string/msg_forgot_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:clickable="true" android:gravity="center"
                    android:id="@+id/btnLogin"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent"
                    android:text="@string/lbl_login"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
                <LinearLayout android:id="@+id/linear3"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <LinearLayout android:id="@+id/linear4"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <View android:background="@color/black_900"
                            android:id="@+id/line"
                            android:layout_gravity="center_vertical"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_123pxh"/>
                        <TextView android:gravity="center"
                            android:id="@+id/txtOrLoginWith"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_weight="0.8"
                            android:layout_width="0dp"
                            android:text="@{splashVM.splashModel.txtOrLoginWith}"
                            style="@style/txtPoppinsregular14_1" tools:text="@string/lbl_or_login_with"/>
                        <View android:background="@color/black_900"
                            android:id="@+id/line1"
                            android:layout_gravity="center_vertical"
                            android:layout_height="@dimen/_1pxv"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_123pxh"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linear5"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_83pxh"
                        android:layout_marginTop="@dimen/_28pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <FrameLayout android:id="@+id/frame"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:layout_width="0dp" style="@style/groupStyleblack_900cornerRadius">
                            <ImageView android:gravity="center"
                                android:id="@+id/image2"
                                android:layout_gravity="center"
                                android:layout_height="@dimen/_16pxv"
                                android:layout_marginBottom="@dimen/_13pxv"
                                android:layout_marginTop="@dimen/_14pxv"
                                android:layout_width="@dimen/_14pxh"
                                android:scaleType="fitXY" android:src="@drawable/img_group_3"/>
                        </FrameLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:nestedScrollingEnabled="false"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            itemSpace="@{@dimen/_20pxh}"
                            tools:itemCount="2" tools:listitem="@layout/row_splash1"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:gravity="center"
                    android:id="@+id/txtDonTHaveAnA"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_74pxh"
                    android:layout_marginStart="@dimen/_74pxh"
                    android:layout_marginTop="@dimen/_71pxv"
                    android:layout_width="wrap_content"
                    android:text="@{splashVM.splashModel.txtDonTHaveAnA}"
                    style="@style/txtPoppinsbold12_1" tools:text="@string/msg_don_t_have_an_a"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
